syntax = "proto3";
option go_package = "github.com/valyankilyan/sandbox-market-bot/api/myinvestapi";

package myinvestapi;

import "google/protobuf/empty.proto";
import "api/myinvestapi/currency.proto";
// import "currency.proto";


message TinkoffToken {
    string Token = 1;
}

message PayinRequest {
    TinkoffToken Token = 1;
    Quotation Quantity = 2;
}

service MyInvestService {
    rpc PayIn(PayinRequest) returns (Quotation);
    rpc GetCurrencies(CurrencyRequest) returns (CurrencyList);
    rpc GetAllCurrencies(google.protobuf.Empty) returns (CurrencyList);
}